    - Correctly check for bad options to the "PublishServerDescriptor"
      config option. Bugfix on 0.2.0.1-alpha; reported by Matt Edman.
    - When we discard a vote as a duplicate, do not report this as an error.
    - When we're configured to be a v3 authority, but we're only listed
      as a non-v3 authority in our DirServer line for ourself, correct the
      listing.
    - Delete unverified-consensus when the real consensus is set.

  o Minor bugfixes (memory leaks):
    - Stop leaking memory on failing case of base32_decode.  Bugfix on
      0.2.0.7-alpha.

  o Minor bugfixes (misc):
    - Make base32_decode() accept upper-case letters.  Bugfix on
      0.2.0.7-alpha.

  o Code simplifications and refactoring:
    - Remove support for the old bw_accounting file: we've been storing
      bandwidth accounting information in the state file since 0.1.2.5-alpha.
      This may result in bandwidth accounting errors if you try to upgrade
      from 0.1.1.x or earlier, or if you try to downgrade to 0.1.1.x or
      earlier.
    - New convenience code to locate a file within the DataDirectory.

Changes in version 0.2.0.8-alpha - 2007-10-12
  o Major features (router descriptor cache):
    - Store routers in a file called cached-descriptors instead of in
      cached-routers. Initialize cached-descriptors from cached-routers
      if the old format is around. The new format allows us to store
      annotations along with descriptors.
    - Use annotations to record the time we received each descriptor, its
      source, and its purpose.
    - Disable the SETROUTERPURPOSE controller command: it is now
      obsolete.
    - Controllers should now specify cache=no or cache=yes when using
      the +POSTDESCRIPTOR command.
    - Bridge authorities now write bridge descriptors to disk, meaning
      we can export them to other programs and begin distributing them
      to blocked users.

  o Major features (directory authorities):